<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trips"
            android:icon="@drawable/ic_directions_walk_black_24dp"
            android:title="@string/menu_trips" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_transport"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/menu_transport" />
    </group>

    <item android:title="Main airports">
        <menu>
            <item
                android:id="@+id/nav_barcelona"
                android:icon="@drawable/ic_flight_black_24dp"
                android:title="@string/menu_barcelona" />
            <item
                android:id="@+id/nav_madrid"
                android:icon="@drawable/ic_flight_black_24dp"
                android:title="@string/menu_madrid" />
            <item
                android:id="@+id/nav_valencia"
                android:icon="@drawable/ic_flight_black_24dp"
                android:title="@string/menu_valencia" />
        </menu>
    </item>

</menu>
