<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_trips">

    <fragment
        android:id="@+id/nav_trips"
        android:name="com.rojer_ko.material.presentation.ui.trips.TripsFragment"
        android:label="@string/menu_trips"
        tools:layout="@layout/fragment_trips" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.rojer_ko.material.presentation.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_transport"
        android:name="com.rojer_ko.material.presentation.ui.transport.TransportFragment"
        android:label="@string/menu_transport"
        tools:layout="@layout/fragment_transport" />

    <fragment
        android:id="@+id/nav_barcelona"
        android:name="com.rojer_ko.material.presentation.ui.barcelona.BarcelonaFragment"
        android:label="@string/menu_barcelona"
        tools:layout="@layout/fragment_barcelona" />

    <fragment
        android:id="@+id/nav_madrid"
        android:name="com.rojer_ko.material.presentation.ui.madrid.MadridFragment"
        android:label="@string/menu_madrid"
        tools:layout="@layout/fragment_madrid" />

    <fragment
        android:id="@+id/nav_valencia"
        android:name="com.rojer_ko.material.presentation.ui.valencia.ValenciaFragment"
        android:label="@string/menu_valencia"
        tools:layout="@layout/fragment_valencia" />
</navigation>